# desire-typer

./: .gitignore  README.md  flake.nix  pyproject.toml
.claude/: CLAUDE.md
desire/: __init__.py  __main__.py  main.py
desire_cli/: __main__.py  main.py  profile.py  sentences.py  themes.py  update.py
desire_cli/words/: __init__.py  adjectives.py  adverbs.py  nouns.py  nouns_plural.py  phrases.py  verbs_base.py  verbs_gerund.py  verbs_past.py  verbs_present.py
typer_cli/: main.py  profile.py  sentences.py  update.py
