[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "typer-cli-tool"
version = "0.6.0"
description = "Desire statement typing in your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Mico Papp" }]
dependencies = [
    "windows-curses>=2.3; sys_platform == 'win32'",
]
keywords = [
    "typing", "typing-test", "typing-speed", "typing-practice",
    "wpm", "terminal", "cli", "monkeytype", "speed-typing",
    "keyboard", "curses", "typing-game", "touch-typing",
    "desire", "statements",
]
classifiers = [
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
]

[tool.setuptools.packages.find]
include = ["typer_cli*", "desire*"]

[project.scripts]
desire = "desire.main:entry"

[project.urls]
Homepage = "https://github.com/pmamico/desire-typer"
Repository = "https://github.com/pmamico/desire-typer"
Issues = "https://github.com/pmamico/desire-typer/issues"
